checking in george's 7 branch, which enables forking of scalatest task, and setting of jvmargs, which lets people ask for more memory to run their tests in