@@ -5,6 +5,9 @@ import org.apache.tools.ant.Task;
 import org.apache.tools.ant.types.Path;
 
 import java.util.ArrayList;
+import java.util.List;
+import org.apache.tools.ant.AntClassLoader;
+import org.apache.tools.ant.taskdefs.Java;
 
 /**
  * <p>
@@ -167,13 +170,46 @@ import java.util.ArrayList;
  * build if there's a test failure.
  * </p>
  *
+ * <p>
+ * Use attribute fork="true" to cause ant to run the tests in
+ * a separate process.
+ * </p>
+ *
+ * <p>
+ * When fork is true, attribute maxmemory may be used to specify
+ * the max memory size that will be passed to the forked jvm.&nbsp;
+ * E.g.:
+ *
+ * <pre>
+ *   &lt;scalatest maxmemory="1280M"&gt;
+ * </pre>
+ *
+ * will cause "-Xmx1280M" to be passed to the java command used to
+ * run the tests.
+ * </p>
+ *
+ * <p>
+ * When fork is true, nested &lt;jvmarg&gt; elements may be used
+ * to pass additional arguments to the forked jvm.
+ * E.g., if you are running into 'PermGen space' memory errors,
+ * you could add this arg to bump up the jvm's MaxPermSize value:
+ *
+ * <pre>
+ *   &lt;jvmarg value="-XX:MaxPermSize=128m"/&gt;
+ * </pre>
+ * </p>
+ *
  * @author George Berger
  */
 public class ScalaTestTask extends Task {
     private String includes;
     private String excludes;
+    private String maxMemory;
     private boolean concurrent;
+    private boolean haltonfailure;
+    private boolean fork;
     private ArrayList<String> runpath = new ArrayList<String>();
+    private ArrayList<String> jvmArgs = new ArrayList<String>();
     private ArrayList<String> suites = new ArrayList<String>();
     private ArrayList<String> membersonlys = new ArrayList<String>();
     private ArrayList<String> wildcards = new ArrayList<String>();
@@ -182,7 +218,6 @@ public class ScalaTestTask extends Task {
         new ArrayList<ReporterElement>();
     private ArrayList<NameValuePair> properties =
         new ArrayList<NameValuePair>();
-    private boolean haltonfailure = false;
 
     //
     // Executes the task.
@@ -200,11 +235,47 @@ public class ScalaTestTask extends Task {
         addConcurrentArg(args);
 
         String[] argsArray = args.toArray(new String[args.size()]);
-        boolean success = Runner.run(argsArray);
+
+        boolean success;
+        if (fork) {
+            success = javaTaskRunner(args);
+        }
+        else {
+            success = Runner.run(argsArray);
+        }
 
         if (!success && haltonfailure) {
             throw new BuildException("ScalaTest run failed.");
         }
+    }
+
+    boolean javaTaskRunner(List<String> args) {
+        Java java = new Java();
+        java.bindToOwner(this);
+        java.init();
+        java.setFork(true);
+        java.setClassname("org.scalatest.tools.Runner");
+
+        AntClassLoader classLoader =
+            (AntClassLoader) getClass().getClassLoader();
+
+        java.setClasspath(new Path(getProject(), classLoader.getClasspath()));
+
+        if (maxMemory != null) {
+            java.createJvmarg().setValue("-Xmx" + maxMemory);
+        }
+
+        for (String arg: jvmArgs) {
+            java.createJvmarg().setValue(arg);
+        }
+
+        for (String arg: args) {
+            java.createArg().setValue(arg);
+        }
+
+        int result = java.executeJava();
+
+        return (result == 0);
     }
 
     //
@@ -433,6 +504,20 @@ public class ScalaTestTask extends Task {
         this.haltonfailure = haltonfailure;
     }
     
+    //
+    // Sets value of 'fork' attribute.
+    //
+    public void setFork(boolean fork) {
+        this.fork = fork;
+    }
+    
+    //
+    // Sets value of 'maxmemory' attribute.
+    //
+    public void setMaxmemory(String max) {
+        this.maxMemory = max;
+    }
+    
     public void setTestNGSuites(Path testNGSuitePath) {
         for (String element: testNGSuitePath.list()) {
             this.testNGSuites.add(element);
@@ -465,7 +550,14 @@ public class ScalaTestTask extends Task {
     // Sets value from nested element 'runpathurl'.
     //
     public void addConfiguredRunpathUrl(RunpathUrl runpathurl) {
-            runpath.add(runpathurl.getUrl());
+        runpath.add(runpathurl.getUrl());
+    }
+
+    //
+    // Sets value from nested element 'jvmarg'.
+    //
+    public void addConfiguredJvmArg(JvmArg arg) {
+        jvmArgs.add(arg.getValue());
     }
 
     //
@@ -681,5 +773,15 @@ public class ScalaTestTask extends Task {
 
         public void   setUrl(String url) { this.url = url; }
         public String getUrl()           { return url;     }
+    }
+
+    //
+    // Class to hold data from <jvmarg> elements.
+    //
+    public static class JvmArg {
+        private String value;
+
+        public void   setValue(String value) { this.value = value; }
+        public String getValue()             { return value;       }
     }
 }
